--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,1 @@
-<button mat-raised-button color="primary">
-  <mat-icon>person</mat-icon>
-  Hello World！
-</button>
-
-<div>
-    <!-- 就是<i class="fa fa-thumbs-up">的概念 -->
-    <mat-icon fontSet="fontawesome" fontIcon="fa-thumbs-up"></mat-icon>
-    <mat-icon fontSet="fontawesome" fontIcon="fa-thumbs-up" color="primary"></mat-icon>
-    <mat-icon fontSet="fontawesome" fontIcon="fa-thumbs-up" color="accent"></mat-icon>
-    <mat-icon fontSet="fontawesome" fontIcon="fa-thumbs-up" color="warn"></mat-icon>
-    <mat-icon fontSet="fontawesome" fontIcon="fa-heart" color="warn"></mat-icon>
-</div>
+<router-outlet></router-outlet>
