--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -8,9 +8,13 @@
     <!-- 在這之後的都會被推到右邊去 -->
     <span class="toolbar-seprator"></span>
 
-    <button mat-icon-button>
-      <mat-icon>message</mat-icon>
+    <button mat-icon-button [matMenuTriggerFor]="messageMenu" #menuTrigger="matMenuTrigger">
+        <mat-icon>message</mat-icon>
     </button>
+    <mat-menu #messageMenu="matMenu">
+        <button mat-menu-item>最新訊息</button>
+        <button mat-menu-item>訊息設定</button>
+    </mat-menu>
     <button mat-icon-button>
       <mat-icon>exit_to_app</mat-icon>
     </button>
@@ -66,7 +70,7 @@
                 <mat-icon>chat_bubble</mat-icon>
                 新訊息
             </h3>
-            <mat-list-item *ngIf="optNew.selected">這是新消息</mat-list-item>
+            <!-- <mat-list-item *ngIf="optNew.selected">這是新消息</mat-list-item> -->
             <mat-list-item *ngIf="optAds.selected">這是廣告消息</mat-list-item>
 
             <mat-divider></mat-divider>
@@ -87,6 +91,38 @@
     </mat-sidenav>
 
     <mat-sidenav-content>
+        <button mat-raised-button [matMenuTriggerFor]="positionMenu">巢狀選單demo</button>
+        <mat-menu #positionMenu="matMenu">
+            <button mat-menu-item [matMenuTriggerFor]="subMenu1">訊息1</button>
+            <button mat-menu-item [matMenuTriggerFor]="subMenu2">訊息2</button>
+            <button mat-menu-item>訊息3</button>
+        </mat-menu>
+
+        <mat-menu #subMenu1="matMenu">
+            <button mat-menu-item>
+                <mat-icon>person</mat-icon>
+                訊息 1-1
+              </button>
+            <button mat-menu-item>
+                <mat-icon>favorite</mat-icon>
+                訊息 1-2
+              </button>
+            <button mat-menu-item>
+                <mat-icon>thumb_up</mat-icon>
+                訊息 1-3
+              </button>
+        </mat-menu>
+
+        <mat-menu #subMenu2="matMenu">
+            <button mat-menu-item>
+                <mat-icon>delete</mat-icon>
+                訊息 2-1
+              </button>
+            <button mat-menu-item disabled>
+                <mat-icon>settings</mat-icon>
+                訊息 2-2
+              </button>
+        </mat-menu>
 
         <mat-drawer-container style="height:100px;margin:10px;border: 1px solid black">
             <mat-drawer mode="side" opened="true">Drawer Side</mat-drawer>
