--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -91,7 +91,7 @@
     </mat-sidenav>
 
     <mat-sidenav-content>
-        <button mat-raised-button [matMenuTriggerFor]="positionMenu">巢狀選單demo</button>
+        <!-- <button mat-raised-button [matMenuTriggerFor]="positionMenu">巢狀選單demo</button>
         <mat-menu #positionMenu="matMenu">
             <button mat-menu-item [matMenuTriggerFor]="subMenu1">訊息1</button>
             <button mat-menu-item [matMenuTriggerFor]="subMenu2">訊息2</button>
@@ -145,7 +145,7 @@
         <mat-toolbar>這是預設的toolbar</mat-toolbar>
         <mat-toolbar color="primary">這是primary的toolbar</mat-toolbar>
         <mat-toolbar color="accent">這是accent的toolbar</mat-toolbar>
-        <mat-toolbar color="warn">這是warn的toolbar</mat-toolbar>
+        <mat-toolbar color="warn">這是warn的toolbar</mat-toolbar> -->
         <router-outlet></router-outlet>
     </mat-sidenav-content>
 </mat-sidenav-container>
