--- a/src/app/dashboard/survey/survey.component.html
+++ b/src/app/dashboard/survey/survey.component.html
@@ -61,6 +61,21 @@
                 </mat-form-field>
             </div>
             <div>
+                <mat-form-field>
+                    <mat-select formControlName="interest" #selectInterest placeholder="你的休閒愛好?"
+                        multiple disableRipple>
+                        <mat-select-trigger>
+                            共選擇了 {{ selectInterest.selected.length }} 項興趣
+                        </mat-select-trigger>
+                        <mat-option [value]="undefined">無</mat-option>
+                        <mat-optgroup *ngFor="let parent of nestInterestList; let index = index"
+                            [label]="parent.name" [disabled]="index===1">
+                            <mat-option *ngFor="let child of parent.subItems" [value]="child.id">{{ child.name }}</mat-option>
+                        </mat-optgroup>
+                    </mat-select>
+                </mat-form-field>
+            </div>
+            <div>
                 <button mat-button matStepperNext>前進到「詳細問題」</button>
             </div>
 
