--- a/src/app/dashboard/survey/survey.component.html
+++ b/src/app/dashboard/survey/survey.component.html
@@ -7,12 +7,20 @@
                 <u>個人資訊</u>
             </ng-template>
             <h4>提供個人資訊</h4>
-            <mat-form-field>
-                <input name="name" matInput placeholder="姓名" formControlName="name"
-                    required>
+            <!-- <mat-form-field [hideRequiredMarker]="true"> -->
+            <mat-form-field hintLabel="最多輸入5個字">
+                <input name="name" matInput formControlName="name" required>
+                <mat-placeholder>
+                    <mat-icon>person</mat-icon>請輸入您的姓名
+                </mat-placeholder>
+                <mat-hint align="end">
+                    已輸入： {{ surveyForm.get('basicQuestions')?.get('name')?.value?.length
+                    || 0 }} / 5
+                </mat-hint>
+                <mat-error>姓名欄位有錯誤</mat-error>
             </mat-form-field>
             <div>
-                <mat-form-field>
+                <mat-form-field color="accent">
                     <input type="text" name="nickname" matInput placeholder="暱稱"
                     />
                 </mat-form-field>
@@ -73,6 +81,13 @@
                             <mat-option *ngFor="let child of parent.subItems" [value]="child.id">{{ child.name }}</mat-option>
                         </mat-optgroup>
                     </mat-select>
+                </mat-form-field>
+            </div>
+            <div>
+                <mat-form-field>
+                    <input type="number" matInput placeholder="請問您的平均日常消費？">
+                    <mat-icon matPrefix>attach_money</mat-icon>
+                    <span matSuffix>新台幣</span>
                 </mat-form-field>
             </div>
             <div>
