--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -86,7 +86,7 @@
         </mat-nav-list>
     </mat-sidenav>
 
-    <mat-sidenav #sideNavEnd opened="true" mode="side" position="end">
+    <mat-sidenav #sideNavEnd opened="false" mode="side" position="end">
         <div>我是右邊選單</div>
     </mat-sidenav>
 
