--- a/src/app/dashboard/inbox/inbox.component.html
+++ b/src/app/dashboard/inbox/inbox.component.html
@@ -75,7 +75,7 @@
                     <mat-icon>inbox</mat-icon>
                     郵件列表
                 </ng-template>
-                郵件列表清單
+                <app-email-list></app-email-list>
             </mat-tab>
             <mat-tab>
                 <ng-template mat-tab-label>
