--- a/src/app/dashboard/survey/survey.component.html
+++ b/src/app/dashboard/survey/survey.component.html
@@ -9,7 +9,7 @@
             <h4>提供個人資訊</h4>
             <!-- <mat-form-field [hideRequiredMarker]="true"> -->
             <mat-form-field hintLabel="最多輸入5個字">
-                <input name="name" matInput formControlName="name" required>
+                <input name="name" matInput formControlName="name" required appSurveyInput>
                 <mat-placeholder>
                     <mat-icon>person</mat-icon>請輸入您的姓名
                 </mat-placeholder>
