--- a/src/app/dashboard/main/main.component.html
+++ b/src/app/dashboard/main/main.component.html
@@ -1,4 +1,23 @@
 <div>
+    <p>Is Browser: {{ platform.isBrowser }}</p>
+    <p>Is Android: {{ platform.ANDROID }}</p>
+    <p>Is iOS: {{ platform.IOS }}</p>
+    <p>Is Firefox: {{ platform.FIREFOX }}</p>
+    <p>Is Blink: {{ platform.BLINK }}</p>
+    <p>Is Webkit: {{ platform.WEBKIT }}</p>
+    <p>Is Trident: {{ platform.TRIDENT }}</p>
+    <p>Is Edge: {{ platform.EDGE }}</p>
+</div>
+
+<h2>目前瀏覽器支援的input types</h2>
+<ul>
+    <li *ngFor="let type of supportInputTypes">{{ type }}</li>
+</ul>
+
+<app-coercion-demo-box display="true" height="10" values="1"></app-coercion-demo-box>
+
+
+<div>
     <button matButton (click)="createOutletOutOfApp()">使用DomPortalOutlet產生插座</button>
     <button matButton (click)="addTemplatePortal()">插入內容</button>
 </div>
